Can not slide value in Input manager #47685

Closed
opened 2016-03-04 13:24:59 +01:00 by Cenek Strichel · 8 comments

System Information
W10, GF770

Blender Version
2.77RC1

Short description of error
Sliding value in the Input manager move mouse on the top and sliding is not possible. Try for example Factor in Edge Crease

slidebug.png

**System Information** W10, GF770 **Blender Version** 2.77RC1 **Short description of error** Sliding value in the Input manager move mouse on the top and sliding is not possible. Try for example Factor in Edge Crease ![slidebug.png](https://archive.blender.org/developer/F287539/slidebug.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda

Added subscriber: @mont29

Added subscriber: @mont29

Ugh… same behavior in official 2.76 too.

Ugh… same behavior in official 2.76 too.

Present even in 2.73 release… odd nobody noticed this before!

Present even in 2.73 release… odd nobody noticed this before!

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This is caused by dragging numbers calling keymap_item_modified, which sets the keymap modified flag and immediately rebuilds the full keymap with WM_keyconfig_update while the button is being dragged.

Possible fixes:

  • Delay flagging the keymap as edited while the button is being manipulated.
  • Change the keymap code to use existing pointers when updating the keymap.
  • Extend ui_but_equals_old to support this case (though its not enough to simply have them be equal, other changes to button updating would be needed).
This is caused by dragging numbers calling `keymap_item_modified`, which sets the keymap modified flag and immediately rebuilds the full keymap with `WM_keyconfig_update` while the button is being dragged. Possible fixes: - Delay flagging the keymap as edited while the button is being manipulated. - Change the keymap code to use existing pointers when updating the keymap. - Extend `ui_but_equals_old` to support this case *(though its not enough to simply have them be equal, other changes to button updating would be needed)*.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2016-03-09 08:58:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47685
No description provided.