Fix/workaround T47685: Drag keymap slider fails

This is a special case where the UI update function re-creases the keymap we're currently editing.
Making it so dragging values fails.